--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,4 +2,10 @@
 
 ---
 
-HEADER
+<header class="px-24 py-12 max-sm:px-5 max-sm:py-10 max-w-7xl w-full mx-auto">
+  <!-- #TODO: no logo (or pick something else) -->
+  <a href="/" class="flex items-center gap-x-4">
+    <img src='/heartbeat.png' alt="blog logo" class="w-16">
+    <p class="uppercase text-3xl text-secondary-900">blog</p>
+  </a>
+</header>
