--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,4 +2,16 @@
 
 ---
 
-FOOTER
+<footer class="bg-tertiary-950 text-center py-20 pb-6 px-5 max-sm:pb-3 max-sm:pt-8">
+  <p class="text-secondary-300">Copyright <span id="copyright-year"></span>. Blog Title</p>
+
+</footer>
+
+<script>
+  const date = new Date();
+  const year = date.getFullYear();
+  const yearElement = document.getElementById("copyright-year") as HTMLElement;
+  yearElement.appendChild(
+    document.createTextNode(year.toString())
+  );
+</script>
