--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,13 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-	<main class="px-24 max-sm:px-5 max-w-7xl mx-auto w-full">
+  <main class="px-24 max-sm:px-5 max-w-7xl mx-auto w-full">
     <h1 class="text-6xl text-primary-900 font-bold mb-5">Blog Title</h1>
-    <p class="text-secondary-900 text-2xl mb-24 max-sm:mb-14">Description text goes here (#TODO: add some text)</p>
+    <p class="text-secondary-900 text-2xl mb-24 max-sm:mb-14">
+      Description text goes here (#TODO: add some text)
+    </p>
     <hr class="w-full border border-primary-900 mb-16" />
   </main>
 </Layout>
