--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,6 +3,7 @@ import { getCollection } from "astro:content";
 
 import Layout from "../layouts/Layout.astro";
 import PostList from "../components/PostList.astro";
+import Main from "../components/Main.astro";
 
 const allPosts = await getCollection("posts");
 /*
@@ -20,12 +21,12 @@ const allPosts = await getCollection("posts");
 ---
 
 <Layout title="Blog - Astro Course">
-  <main class="px-24 max-sm:px-5 max-w-7xl mx-auto w-full">
+  <Main>
     <h1 class="text-6xl text-primary-900 font-bold mb-5">Blog Title</h1>
     <p class="text-secondary-900 text-2xl mb-24 max-sm:mb-14">
       Here is the place for some description, 10 to 15 words max.
     </p>
+  </Main>
 
-    <PostList posts={allPosts} />
-  </main>
+  <PostList posts={allPosts} />
 </Layout>
