chore: set up (and use) absolute paths

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,8 +1,8 @@
 ---
 import { getCollection, type CollectionEntry } from "astro:content";
 
-import Layout from "../../layouts/Layout.astro";
-import Main from "../../components/Main.astro";
+import Layout from "@layouts/Layout.astro";
+import Main from "@components/Main.astro";
 
 export const getStaticPaths = async () => {
   const posts = await getCollection("posts");
