--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,13 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import Main from "@components/Main.astro";
+import H1 from "@components/H1.astro";
 ---
 
 <Layout title="Welcome to Astro.">
   <Main>
-    <h1 class="text-6xl text-primary-900 font-bold mb-5">Blog Title</h1>
+    <H1 text="Blog Title" />
+
     <p class="text-secondary-900 text-2xl mb-24 max-sm:mb-14">
       Description text goes here (#TODO: add some text)
     </p>
