--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -60,6 +60,8 @@ const { Content, headings } = await post.render();
       class="rounded-2xl shadow-xl mb-28 aspect-thumbnail object-cover"
     />
 
-    <Content />
+    <div class="prose prose-2xl overflow-visible relative">
+      <Content />
+    </div>
   </Main>
 </Layout>
