feat: make use of share and table

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -4,6 +4,8 @@ import { getCollection, type CollectionEntry } from "astro:content";
 import Layout from "@layouts/Layout.astro";
 import Main from "@components/Main.astro";
 import H1 from "@components/H1.astro";
+import TableOfContent from "@components/TableOfContent.astro";
+import Share from "@components/Share.astro";
 
 export const getStaticPaths = async () => {
   const posts = await getCollection("posts");
@@ -54,14 +56,19 @@ const { Content, headings } = await post.render();
     >
 
     <H1 text={post.data.title} />
+
     <img
       src={post.data.image.src}
       alt={post.data.title}
       class="rounded-2xl shadow-xl mb-28 aspect-thumbnail object-cover"
     />
 
-    <div class="prose prose-2xl overflow-visible relative">
-      <Content />
+    <div class="relative flex gap-12">
+      <Share {post} />
+      <div class="prose prose-2xl overflow-visible relative">
+        <Content />
+      </div>
+      <TableOfContent {headings} />
     </div>
   </Main>
 </Layout>
