--- a/src/components/TableOfContent.astro
+++ b/src/components/TableOfContent.astro
@@ -8,13 +8,13 @@ interface Props {
 const { headings } = Astro.props;
 ---
 
-<nav class="max-lg:hidden">
+<nav>
   <ul>
     {
       headings.map((heading) => {
         return (
           <li class="text-lg mb-4 text-secondary-500">
-            <a href={`#${heading.slug}`}>{heading.text}</a>
+            <a href={`#${heading.slug}`}>#{heading.text}</a>
           </li>
         );
       })
