--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -63,12 +63,15 @@ const { Content, headings } = await post.render();
       class="rounded-2xl shadow-xl mb-28 aspect-thumbnail object-cover"
     />
 
-    <div class="relative flex gap-12">
+    <div class="mb-10">
+      <TableOfContent {headings} />
+    </div>
+
+    <div class="relative">
       <Share {post} />
       <div class="prose prose-2xl overflow-visible relative">
         <Content />
       </div>
-      <TableOfContent {headings} />
     </div>
   </Main>
 </Layout>
