--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -6,7 +6,7 @@ import PostList from "@components/PostList.astro";
 import Main from "@components/Main.astro";
 import H1 from "@components/H1.astro";
 
-const allPosts = await getCollection("posts");
+const posts = (await getCollection("posts")).slice(0, 6);
 /*
 
     data: {
@@ -27,6 +27,6 @@ const allPosts = await getCollection("posts");
     <p class="text-secondary-900 text-2xl mb-24 max-sm:mb-14">
       Here is the place for some description, 10 to 15 words max.
     </p>
-    <PostList posts={allPosts} />
+    <PostList {posts} />
   </Main>
 </Layout>
