--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,6 +5,7 @@ import Layout from "@layouts/Layout.astro";
 import PostList from "@components/PostList.astro";
 import Main from "@components/Main.astro";
 import H1 from "@components/H1.astro";
+import Pagination from "@components/Pagination.astro";
 
 const posts = (await getCollection("posts")).slice(0, 6);
 /*
@@ -27,6 +28,13 @@ const posts = (await getCollection("posts")).slice(0, 6);
     <p class="text-secondary-900 text-2xl mb-24 max-sm:mb-14">
       Here is the place for some description, 10 to 15 words max.
     </p>
+
+    <div class="mb-12">
+      <Pagination nextURL="/blog/2" />
+    </div>
     <PostList {posts} />
+    <div class="mb-36">
+      <Pagination nextURL="/blog/2" />
+    </div>
   </Main>
 </Layout>
