feat: customize meta tags per page (per blog post)

--- a/src/pages/blog/[page].astro
+++ b/src/pages/blog/[page].astro
@@ -51,7 +51,10 @@ what can we expect from page?
 */
 ---
 
-<Layout title="Blog - Astro Course">
+<Layout
+  title="Blog - Astro Course"
+  description="Read and learn from professionals and enthusiasts"
+>
   <Main>
     <H1 text="Blog Title" />
     <p class="text-secondary-900 text-2xl mb-24 max-sm:mb-14">
