--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -49,7 +49,11 @@ const { Content, headings } = await post.render();
 */
 ---
 
-<Layout title={post.data.title}>
+<Layout
+  title={post.data.title}
+  image={post.data.image.src}
+  description={post.data.description}
+>
   <Main>
     <a href="/blog" class="text-secondary-500 text-2xl mb-16 underline block"
       >← Back to all blogs</a
