--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -6,8 +6,11 @@ import PostList from "@components/PostList.astro";
 import Main from "@components/Main.astro";
 import H1 from "@components/H1.astro";
 import Pagination from "@components/Pagination.astro";
+import CategoryList from "@components/CategoryList.astro";
 
 const posts = (await getCollection("posts")).slice(0, 6);
+const allCategories = posts.flatMap((post) => post.data.categories);
+const categories = Array.from(new Set(allCategories));
 /*
 
     data: {
@@ -32,6 +35,15 @@ const posts = (await getCollection("posts")).slice(0, 6);
       Here is the place for some description, 10 to 15 words max.
     </p>
 
+    <!-- tags -->
+    <div
+      class="grid grid-cols-[auto,1fr] gap-x-14 gap-y-3 mb-16 max-lg:grid-cols-1"
+    >
+      <h2 class="font-bold text-5xl text-primary-900">Fags</h2>
+      <CategoryList {categories} />
+    </div>
+
+    <!-- pagination  -->
     <div class="mb-12">
       <Pagination nextURL="/blog/2" />
     </div>
