--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -39,7 +39,7 @@ const categories = Array.from(new Set(allCategories));
     <div
       class="grid grid-cols-[auto,1fr] gap-x-14 gap-y-3 mb-16 max-lg:grid-cols-1"
     >
-      <h2 class="font-bold text-5xl text-primary-900">Fags</h2>
+      <h2 class="font-bold text-5xl text-primary-900">Tags</h2>
       <CategoryList {categories} />
     </div>
 
