--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,14 @@
 ---
+import { getCollection } from "astro:content";
+
 import Layout from "@layouts/Layout.astro";
 import Main from "@components/Main.astro";
 import H1 from "@components/H1.astro";
+import FeaturedPost from "@components/FeaturedPost.astro";
+
+const allPosts = await getCollection("posts");
+const featuredPost = allPosts.filter((post) => post.data.featured);
+const posts = allPosts.filter((post) => !post.data.featured).slice(0, 4);
 ---
 
 <Layout title="Welcome to Astro.">
@@ -11,6 +18,9 @@ import H1 from "@components/H1.astro";
     <p class="text-secondary-900 text-2xl mb-24 max-sm:mb-14">
       Description text goes here (#TODO: add some text)
     </p>
+
+    {featuredPost.map((post) => <FeaturedPost {post} />)}
+
     <hr class="w-full border border-primary-900 mb-16" />
   </Main>
 </Layout>
