--- a/src/pages/category/[category]/[page].astro
+++ b/src/pages/category/[category]/[page].astro
@@ -78,13 +78,7 @@ what can we expect from page?
       Here is the place for some description, 10 to 15 words max.
     </p>
 
-    <!-- tags -->
-    <div
-      class="grid grid-cols-[auto,1fr] gap-x-14 gap-y-3 mb-16 max-lg:grid-cols-1"
-    >
-      <h2 class="font-bold text-5xl text-primary-900">Posts tagged</h2>
-      <CategoryList categories={categories} />
-    </div>
+    <CategoryList title="Posts tagged" categories={categories} />
 
     <div class="mb-12">
       <Pagination prevURL={page.url.prev} nextURL={page.url.next} />
