--- a/src/pages/category/[slug].astro
+++ b/src/pages/category/[slug].astro
@@ -56,13 +56,7 @@ const { category, posts } = Astro.props;
       Here is the place for some description, 10 to 15 words max.
     </p>
 
-    <!-- tags -->
-    <div
-      class="grid grid-cols-[auto,1fr] gap-x-14 gap-y-3 mb-16 max-lg:grid-cols-1"
-    >
-      <h2 class="font-bold text-5xl text-primary-900">Posts tagged</h2>
-      <CategoryList categories={[category]} />
-    </div>
+    <CategoryList title="Posts tagged" categories={[category]} />
 
     <!-- pagination  -->
     {
