--- a/src/components/CategoryList.astro
+++ b/src/components/CategoryList.astro
@@ -4,12 +4,20 @@ import type { CollectionEntry } from "astro:content";
 import Category from "./Category.astro";
 
 interface Props {
+  title?: string;
   categories: CollectionEntry<"posts">["data"]["categories"];
 }
 
-const { categories } = Astro.props;
+const { title, categories } = Astro.props;
 ---
 
-<div class="flex gap-4 flex-wrap items-center">
-  {categories.map((category) => <Category {category} />)}
+<!-- tags -->
+<div
+  class="grid grid-cols-[auto,1fr] gap-x-14 gap-y-3 mb-16 max-lg:grid-cols-1"
+>
+  {title && <h2 class="font-bold text-5xl text-primary-900">{title}</h2>}
+
+  <div class="flex gap-4 flex-wrap items-center">
+    {categories.map((category) => <Category {category} />)}
+  </div>
 </div>
