--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,11 +1,13 @@
 ---
 import { getCollection, type CollectionEntry } from "astro:content";
+import { Image } from "astro:assets";
 
 import Layout from "@layouts/Layout.astro";
 import Main from "@components/Main.astro";
 import H1 from "@components/H1.astro";
 import TableOfContent from "@components/TableOfContent.astro";
 import Share from "@components/Share.astro";
+import { getLocalImage } from "@utils/getLocalImage";
 
 export const getStaticPaths = async () => {
   const posts = await getCollection("posts");
@@ -30,6 +32,8 @@ interface Props {
 const { post } = Astro.props;
 
 const { Content, headings } = await post.render();
+
+const imageImport = await getLocalImage(post.data.image.src);
 
 /*
   data: {
@@ -61,9 +65,12 @@ const { Content, headings } = await post.render();
 
     <H1 text={post.data.title} />
 
-    <img
-      src={post.data.image.src}
+    <Image
+      src={imageImport}
       alt={post.data.title}
+      width={1024}
+      height={1024 / 1.5}
+      format="webp"
       class="rounded-2xl shadow-xl mb-28 aspect-thumbnail object-cover"
     />
 
